--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,11 @@
 <h1>New Article</h1>
 
+
+<%= form_for @article do |f| %>
+   <p>
+    </p>
+<% end %>
+
 <%= render 'form' %>
 
 <%= link_to 'Back', articles_path %>
