--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,10 +1,14 @@
 <h1>New Article</h1>
-
-
-<%= form_for @article do |f| %>
-   <p>
-    </p>
+<% if @article.errors.any? %>
+<h2> The following errors prevented the article from getting created </h2>
+<ul>
+  <% @article.errors.full_messages.each do |msg| %>
+  <li><%= msg %></li>
+  <% end %>
+</ul>
 <% end %>
+
+
 
 <%= render 'form' %>
 
